--- a/team.Rmd
+++ b/team.Rmd
@@ -36,7 +36,9 @@ ggplot(happy, aes(x=happy)) +geom_bar() #initial view of the distribution before
 
 
 index_na = which(is.na(happy$happy)==TRUE | (happy$happy == "IAP") == TRUE | (happy$happy =="DK") == TRUE ) #used find the the rows where happy column has an NA, DK, or IAP values
-head(index_na) #
+head(index_na)
+
+length(index_na) # The total number of indexes with the value NA
 
 happy_clean <- happy[-index_na, ]
 happy_clean
@@ -44,7 +46,7 @@ ggplot(happy_clean, aes(x=happy)) + geom_bar() #using the barchart, we can see t
 
 ```
 
-In total there were `....` number of missing values for the following `....` variables. 
+In total there were `4756` number of missing values for the following `6` variables. 
 
 Variables were also cast into the correct type in order to ease data visualization. This was done by:
 ```{r}
